# vegovaUrnik

./: GEMINI.md  README.md  SquareLine_Project.sll  SquareLine_Project.slp  SquareLine_Project.spj  Themes.slt  project.info
assets/: ui_font_H1.fcfg  ui_font_P1.fcfg  (+5 more)
source code/esp32-smartdisplay-demo-main/src/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_helpers.c  ui_helpers.h  ui_theme_manager.c  ui_theme_manager.h  ui_themes.c  ui_themes.h
source code/esp32-smartdisplay-demo-main/src/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_lessonbox.c  ui_comp_lessonbox.h
source code/esp32-smartdisplay-demo-main/src/ui/fonts/: ui_font_H1.c  ui_font_P1.c  ui_font_h3.c  ui_font_p.c
source code/esp32-smartdisplay-demo-main/src/ui/images/: ui_img_diapozitiv10_png.c  ui_img_diapozitiv11_png.c  ui_img_diapozitiv12_png.c  ui_img_diapozitiv13_png.c  ui_img_diapozitiv14_png.c  ui_img_diapozitiv15_png.c  ui_img_diapozitiv16_png.c  ui_img_diapozitiv17_png.c  ui_img_diapozitiv18_png.c  ui_img_diapozitiv19_png.c  ui_img_diapozitiv1_png.c  ui_img_diapozitiv20_png.c  ui_img_diapozitiv21_png.c  ui_img_diapozitiv22_png.c  ui_img_diapozitiv23_png.c  ui_img_diapozitiv24_png.c  ui_img_diapozitiv25_png.c  ui_img_diapozitiv26_png.c  ui_img_diapozitiv2_png.c  ui_img_diapozitiv3_png.c  ui_img_diapozitiv4_png.c  ui_img_diapozitiv5_png.c  ui_img_diapozitiv6_png.c  ui_img_diapozitiv7_png.c  ui_img_diapozitiv8_png.c  ui_img_diapozitiv9_png.c
source code/esp32-smartdisplay-demo-main/src/ui/screens/: ui_main.c  ui_main.h  ui_startup.c  ui_startup.h
(+10 files in other folders)
